CHANGELOG

** Test Engine is regularly updated to support recent Dear ImGui version, when a change is required.
   Those changes are not all listed here.
** For a while this is going to ONLY INCLUDE BREAKING CHANGES.

2024/12/20:
- TestEngine: fixed error recovery mis-asserting after a GuiFunc triggered
  a failed error (when a test fail, error recover runs but shouldn't assert).

2024/12/19:
- TestEngine: ctx->SetVarsDataType() created blocks are zero-cleared before
  construction.

2024/12/18:
- TestEngine: fixed an issue accessing items when parent window is too small
  to have a visible scrolling layer.

2024/12/04:
- TestEngine: fixed an issue with v1.91.1 where ImGuiPlatformMonitor array
  pointer was invalidated at end of a test, which would affect code taking
  pointers to Monitors[].

2024/11/27:
- TestEngine: updated for internal changes in v1.91.6.

2024/10/17:
- TestEngine: updated for various internal changes in v1.91.4.
- TestEngine: *BREAKING* renamed ImGuiTestItemInfo's InFlags to ItemFlags. 
  (it's unlikely to have been used by end-user or tests. Please let us know if you did!).

2024/10/02:
- TestEngine: moved processing of TestFunc from being done post-NewFrame to being done pre-EndFrame.
  This makes all the timing/order matches between tests using GuiFunc and tests relying on gui code
  submitted independently.
    Prev: NewFrame -> test's GuiFunc -> test's TestFunc -> other UI -> EndFrame
    Now:  NewFrame -> test's GuiFunc -> other UI -> test's TestFunc -> EndFrame
  This doesn't make a difference for TestSuite.
  This _should_ not make a difference for end-user, other than making all timing/order matches
  between TestSuite and user apps not using test's GuiFunc. Different order means that subtle
  ordering issues applying to user not using GuiFunc would have been uncaught.

2024/09/27:
- TestEngine: updated for support for error handling/recovery mechanism from v1.91.3.